--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <a class="nav-link" href="team.html">Team</a>
         <a class="nav-link" href="contribute.html">Contribute</a>
         <a class="button button-primary margin-left" href="mailto:lmalm@afi.edu">
-          <span><img class="icon-dark" src="assets/mail-dark.svg" width="20" alt="Email"><img class="icon-light" src="assets/mail-light.svg" width="20" alt="Email"></span>Contact us</a>
+          <span><img class="icon-dark" src="assets/mail-dark.svg" width="20" alt="Email"><img class="icon-light"
+              src="assets/mail-light.svg" width="20" alt="Email"></span>Contact us</a>
       </nav>
     </header>
 
@@ -34,7 +35,7 @@
         <span></span>
       </div>
     </header>
-  
+
     <nav class="mobile-nav" id="mobile-nav">
       <ul>
         <li>
@@ -47,7 +48,8 @@
           <a class="nav-link" href="contribute.html">Contribute</a>
         </li>
         <li><a class="button button-primary" href="mailto:lmalm@afi.edu">
-          <span><img class="icon-dark" src="assets/mail-dark.svg" width="20" alt="Email"><img class="icon-light" src="assets/mail-light.svg" width="20" alt="Email"></span>Contact us</a>
+            <span><img class="icon-dark" src="assets/mail-dark.svg" width="20" alt="Email"><img class="icon-light"
+                src="assets/mail-light.svg" width="20" alt="Email"></span>Contact us</a>
         </li>
       </ul>
     </nav>
@@ -62,7 +64,8 @@
 
     <section class="logline-section">
       <h4 class="section-title">Logline</h4>
-      <p class="p-large">A predator in queer disguise attempts to seduce a lipstick femme lesbian into the amnesia of date rape drugs when she unexpectedly turns the tables on him.</p>
+      <p class="p-large">A predator in queer disguise attempts to seduce a lipstick femme lesbian into the amnesia of
+        date rape drugs when she unexpectedly turns the tables on him.</p>
     </section>
 
     <section class="themes-section">
@@ -86,7 +89,9 @@
       </video>
       <div class="overlay-content">
         <h4 class="section-title">Why this story matters</h4>
-        <p class="p-large">The same month Roe v Wade was overturned in 2022, I was drugged at a gay club in West Hollywood, woke up in a hospital with no memory, bruised knees and a $1,724.89 medical bill only for the LAPD to never get back to me.</p>
+        <p class="p-large">The same month Roe v Wade was overturned in 2022, I was drugged at a gay club in West
+          Hollywood, woke up in a hospital with no memory, bruised knees and a $1,724.89 medical bill only for the LAPD
+          to never get back to me.</p>
         <p class="p-large">This story is my revenge.</p>
         <p>– Lily Malm, Screenwriter</p>
       </div>
@@ -100,9 +105,11 @@
       </div>
       <div class="btn-wrapper">
         <a class="button button-primary" href="contribute.html">
-          <span><img class="icon-dark" src="assets/handshake-dark.svg" width="20" alt="Email"><img class="icon-light" src="assets/handshake-light.svg" width="20" alt="G"></span>Contribute</a>
+          <span><img class="icon-dark" src="assets/handshake-dark.svg" width="20" alt="Email"><img class="icon-light"
+              src="assets/handshake-light.svg" width="20" alt="G"></span>Contribute</a>
         <a class="button button-secondary margin-left" href="team.html">
-            <span><img class="icon-dark" src="assets/group-dark.svg" width="20" alt="Group"><img class="icon-light" src="assets/group-light.svg" width="20" alt="Group"></span>Get to know our team</a>
+          <span><img class="icon-dark" src="assets/group-dark.svg" width="20" alt="Group"><img class="icon-light"
+              src="assets/group-light.svg" width="20" alt="Group"></span>Meet the production team</a>
       </div>
     </section>
   </main>
