--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <section class="nav-section">
     <header class="navbar-desktop">
       <div class="brand">
-        <img width="130" src="assets/lavender-menaced-logo-200x74.png" alt="Logo">
+        <a href="index.html">
+          <img width="130" src="assets/lavender-menaced-logo-200x74.png" alt="Logo">
+        </a>
       </div>
       <nav class="nav-links" id="nav-links">
         <a class="nav-link active" href="index.html">About</a>
@@ -27,7 +29,9 @@
 
     <header class="navbar-mobile">
       <div class="brand">
-        <img width="130" src="assets/lavender-menaced-logo-200x74.png" alt="Logo">
+        <a href="index.html">
+          <img width="130" src="assets/lavender-menaced-logo-200x74.png" alt="Logo">
+        </a>
       </div>
       <div class="hamburger" id="hamburger">
         <span></span>
